vault/overlays/dell7040/vault-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-route
  namespace: vault
spec:
  hostnames:
    - vault.lab.definit.co.uk
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: vault-gateway
      namespace: vault
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: vault-active
          port: 8200
          weight: 1
